--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "egui Template PWA",
-  "short_name": "egui-template-pwa",
+  "name": "BeatSaber Song Manager PWA",
+  "short_name": "bs-song-manager-pwa",
   "icons": [
     {
       "src": "./icon-256.png",
@@ -19,7 +19,7 @@
       "type": "image/png"
     }
   ],
-  "lang": "en-US",
+  "lang": "zh-CN",
   "id": "/index.html",
   "start_url": "./index.html",
   "display": "standalone",
