--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,16 +10,16 @@ rust-version = "1.60"
 
 [dependencies]
 egui = "0.19.0"
-eframe = { version = "0.19.0", features = ["persistence"] }
-
-# You only need serde if you want app persistence:
-serde = { version = "1", features = ["derive"] }
-
-# native:
+eframe = "0.19.0"
+serde_json = "1.0"
 tracing-subscriber = "0.3"
+rfd = "0.10.0"
+rodio = "0.16.0"
+sha-1 = "0.10.0"
+hex = "0.4.3"
+egui_extras = {version="0.19.0",features=["image"]}
+image = { version = "0.24", features = ["jpeg", "png"] }
 
-[profile.release]
-opt-level = 2 # fast and small wasm
 
 # Optimize all dependencies even in debug builds:
 [profile.dev.package."*"]
