--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ rust-version = "1.60"
 
 
 [dependencies]
+log = "0.4"
 egui = "0.19.0"
 eframe = "0.19.0"
 serde_json = "1.0"
@@ -17,8 +18,11 @@ rfd = "0.10.0"
 rodio = "0.16.0"
 sha-1 = "0.10.0"
 hex = "0.4.3"
-egui_extras = {version="0.19.0",features=["image"]}
+egui_extras = { version = "0.19.0", features = ["image"] }
 image = { version = "0.24", features = ["jpeg", "png"] }
+rust-i18n = "0.6.1"
+once_cell = "1.16.0"
+sys-locale = "0.2.3"
 
 
 # Optimize all dependencies even in debug builds:
@@ -35,3 +39,8 @@ opt-level = 2
 # If you fork https://github.com/emilk/egui you can test with:
 # egui = { path = "../egui/crates/egui" }
 # eframe = { path = "../egui/crates/eframe" }
+
+[package.metadata.i18n]
+available-locales = ["en", "zh-CN"]
+default-locale = "en"
+load-path = "locales"
