--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,14 @@ eframe = "0.19.0"
 serde_json = "1.0"
 tracing-subscriber = "0.3"
 rfd = "0.10.0"
-rodio = "0.16.0"
+rodio = { version = "0.16.0", default-features = false, features = ["vorbis"] }
 sha-1 = "0.10.0"
 hex = "0.4.3"
 egui_extras = { version = "0.19.0", features = ["image"] }
-image = { version = "0.24", features = ["jpeg", "png"] }
+image = { version = "0.24", default-features = false, features = [
+    "jpeg",
+    "png",
+] }
 rust-i18n = "0.6.1"
 once_cell = "1.16.0"
 sys-locale = "0.2.3"
