--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ serde_json = "1.0"
 tracing-subscriber = "0.3"
 rfd = "0.10.0"
 rodio = { version = "0.16.0", default-features = false, features = ["vorbis"] }
+tokio = { version = "1", features = ["full"] }
 sha-1 = "0.10.0"
 hex = "0.4.3"
 egui_extras = { version = "0.19.0", features = ["image"] }
@@ -26,6 +27,13 @@ image = { version = "0.24", default-features = false, features = [
 rust-i18n = "0.6.1"
 once_cell = "1.16.0"
 sys-locale = "0.2.3"
+deunicode = "1.3.2"
+regex = "1.7.0"
+futures = "0.3.25"
+bb8 = "0.8.0"
+tokio-native-tls = "0.3.0"
+native-tls = "0.2.11"
+hyper = { version = "0.14", features = ["full"] }
 
 
 # Optimize all dependencies even in debug builds:
